examples/test/testpolicy16370.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16370
  namespace: namespace61
spec:
  podSelector:
    matchLabels:
      key7: value45
      key45: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key32: value35
      podSelector:
        matchLabels:
          key3: value41
          key6: value18
